fix: enhance item description styling and adjust alignment in info container

--- a/src/components/menuPrint.module.css
+++ b/src/components/menuPrint.module.css
@@ -94,6 +94,15 @@
   font-size: 13px;
   opacity: 0.75;
   margin: 4px 0 0 0;
+
+  display: -webkit-box;
+  line-clamp: 2;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+
+  overflow-wrap: break-word;
+  word-break: break-word;
 }
 
 .itemHighlight {
@@ -147,7 +156,7 @@
 .infoContainer {
   display: flex;
   flex-direction: column;
-  align-items: center;
+  align-items: end;
   gap: 8px;
 }
 
@@ -320,6 +329,7 @@
 
   .itemImage {
     filter: grayscale(100%) contrast(1.1);
+    -webkit-filter: grayscale(100%) contrast(1.1);
   }
 
   .itemIngredients {
